# solana-temp

./: .gitignore  README.md  get-real-oracles.js
crud-dapp/: README.md  package.json
crud-dapp/anchor/: Anchor.toml
favorites/: .env  .env.example  Anchor.toml  package.json
favorites/scripts/: interact.ts
favorites/tests/: favorites.ts
lending/: Anchor.toml  package.json
lending/bankrun-utils/: bankrunConnection.ts
lending/tests/: bankrun.spec.ts
new-nft/: create-collection.ts  create-nft.ts  package.json  verify-nft.ts
new-token/: bos5iQWZyBSmWXBAWQfMZvokMzVnd4tYQKwKD4eiwLP.json  metadata.json  mntxvnMonecfxsh6K9e2BprMFvLw9g4mmPgYwpZfbYh.json
stablecoin/: Anchor.toml  package.json
stablecoin/tests/: stablecoin.ts
swap/: Anchor.toml  package.json
swap/tests/: swap.ts
token-lottery/: README.md  package.json
token-lottery/anchor/: Anchor.toml  switchboard.json
token-lottery/anchor/programs/tokenlottery/: Cargo.toml
token-lottery/anchor/programs/tokenlottery/src/: lib.rs
token-lottery/setup/: oracle0.json  oracle1.json  oracle10.json  oracle11.json  oracle12.json  oracle13.json  oracle14.json  oracle15.json  oracle16.json  oracle17.json  oracle2.json  oracle3.json  oracle4.json  oracle5.json  oracle6.json  oracle7.json  oracle8.json  oracle9.json  randomness_queue.json  sb_randomness_config.json  setup-local.sh  start-validator.sh
token-vesting/: README.md  package.json  tsconfig.json
token-vesting/anchor/: Anchor.toml  tsconfig.json
voting-dapp/: next.config.mjs  package.json
voting-dapp/anchor/: Anchor.toml  Cargo.toml
(+78 files in other folders)
